package com.corntree.milpa.fly.protocol.response;

option optimize_for = SPEED;

enum ResponseCode {
  OK = 0;
  ERROR_UNKOWN = 1;
  BAD_PROTOCOL = 2;
  BAD_PARAMETER_EMAIL = 3;
  BAD_PARAMETER_USERNAME = 4;
  BAD_PARAMETER_USERNAME_EXIST = 5;
}

message BaseResponse {
  required ResponseCode code = 1;
  optional string desc = 2;
}

